@@ -1,4 +1,5 @@
 2.2.5
+ * Calculate last compacted key on startup (CASSANDRA-6216)
  * Make randompartitioner work with new vnode allocation (CASSANDRA-12647)
  * Add algorithmic token allocation (CASSANDRA-7032)
  * maxPurgeableTimestamp needs to check memtables too (CASSANDRA-9949)
